--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/validator": "^13.0.0",
+    "axios": "^0.19.2",
     "nuxt": "^2.0.0",
     "validator": "^13.0.0",
     "vue": "^2.6.11",
