--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "validator": "^13.0.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.2"
+    "vue-property-decorator": "^8.4.2",
+    "vuex-module-decorators": "^0.17.0"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.6.0",
+    "@nuxtjs/vuetify": "^1.11.2",
     "node-sass": "^4.14.0",
     "sass-loader": "^8.0.2"
   }
