feat: Update login page UI 1. Toggle password method. 2. Import nuxt-property-decorator.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.2",
     "cookiejs": "^1.0.26",
     "nuxt": "^2.0.0",
+    "nuxt-property-decorator": "^2.7.2",
     "qs": "^6.9.4",
     "validator": "^13.0.0",
     "vue": "^2.6.11",
