--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nuxt": "^2.0.0",
     "nuxt-property-decorator": "^2.7.2",
     "qs": "^6.9.4",
+    "stylelint-config-sass-guidelines": "^7.0.0",
     "validator": "^13.0.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
@@ -29,6 +30,8 @@
     "@nuxtjs/vuetify": "^1.11.2",
     "@types/cookiejs": "^1.2.0",
     "node-sass": "^4.14.0",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "stylelint": "^13.6.1",
+    "stylelint-config-standard": "^20.0.0"
   }
 }
