--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "lint:css": "npx stylelint **/*.scss **/*.vue --fix"
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
