--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,10 @@
 {
-  "extends": ["stylelint-config-standard", "stylelint-config-sass-guidelines"]
+  "extends": ["stylelint-config-standard", "stylelint-config-sass-guidelines"],
+  "rules": {
+    "scss/at-import-partial-extension-blacklist": null,
+    "selector-class-pattern": null,
+    "selector-pseudo-element-no-unknown": null,
+    "string-quotes": "double",
+    "rule-empty-line-before": "never-multi-line"
+  }
 }
