--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:css": "npx stylelint **/*.scss **/*.vue --fix"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.12.5",
     "@types/axios": "^0.14.0",
     "@types/validator": "^13.0.0",
     "axios": "^0.19.2",
@@ -28,6 +29,7 @@
     "vuex-module-decorators": "^0.17.0"
   },
   "devDependencies": {
+    "@nuxt/types": "^2.14.12",
     "@nuxt/typescript-build": "^0.6.0",
     "@nuxtjs/vuetify": "^1.11.2",
     "@types/cookiejs": "^1.2.0",
