--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint:css": "npx stylelint **/*.scss **/*.vue --fix"
+    "lint:css": "npx stylelint **/*.scss **/*.vue --fix",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
