Fix: process.env is undefined. - Should use .env instead of process.env. - It costs me 2 days failfish.

--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "@types/validator": "^13.0.0",
     "cookie-universal-nuxt": "^2.1.4",
     "cookiejs": "^1.0.26",
-    "nuxt": "^2.0.0",
+    "cross-env": "^7.0.3",
+    "nuxt": "^2.15.3",
     "nuxt-property-decorator": "^2.7.2",
     "qs": "^6.9.4",
     "stylelint-config-sass-guidelines": "^7.0.0",
     "validator": "^13.0.0",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
     "vuex-module-decorators": "^0.17.0"
